# cxxrl

./: CMakeLists.txt  rms.cpp
cmake/: gtest.cmake
include/cxxrl/: action_trait.hpp  env_trait.hpp  environment.hpp  montecarlo_onpolicy.hpp  montecarlo_ordinary_sampling.hpp  random_walk.hpp  state_trait.hpp  trait.hpp
src/: CMakeLists.txt  rms.cpp
test/: CMakeLists.txt
